--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
     <header>
 
         <nav class="navbar">
-            <img src="/images/logo.png" alt="404 ERROR" srcset="">
+            <img src="images/logo.png" alt="404 ERROR" srcset="">
             <div class="nav-links">
                 <i class="fa-solid fa-xmark"></i>
                 <ul>
