changing image locations

--- a/index.html
+++ b/index.html
@@ -426,19 +426,19 @@
 
         <div class="row">
             <div class="campus-col">
-                <img src="/images/london.png" alt="" srcset="">
+                <img src="images/london.png" alt="" srcset="">
                 <div class="layer">
                     <h1>Multan</h1>
                 </div>
             </div>
             <div class="campus-col">
-                <img src="/images/washington.png" alt="" srcset="">
+                <img src="images/washington.png" alt="" srcset="">
                 <div class="layer">
                     <h1>Faisalbad</h1>
                 </div>
             </div>
             <div class="campus-col">
-                <img src="/images/newyork.png" alt="" srcset="">
+                <img src="images/newyork.png" alt="" srcset="">
                 <div class="layer">
                     <h1>Lahore</h1>
                 </div>
@@ -452,21 +452,21 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo doloremque deleniti eaque porro iste.</p>
         <div class="row">
             <div class="facilities-col">
-                <img src="../images/library.png" alt="" srcset="">
+                <img src="images/library.png" alt="" srcset="">
                 <h3>World Class library</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates odio accusantium, facilis
                     temporibus rerum nulla officiis, magnam expedita, asperiores ipsam distinctio nemo culpa.</p>
 
             </div>
             <div class="facilities-col">
-                <img src="/images/cafeteria.png" alt="" srcset="">
+                <img src="images/cafeteria.png" alt="" srcset="">
                 <h3>Tasty and Healthy Food</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates odio accusantium, facilis
                     temporibus rerum nulla officiis, magnam expedita, asperiores ipsam distinctio nemo culpa.</p>
 
             </div>
             <div class="facilities-col">
-                <img src="/images/basketball.png" alt="" srcset="">
+                <img src="images/basketball.png" alt="" srcset="">
                 <h3>Asia Largest PlayGround</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates odio accusantium, facilis
                     temporibus rerum nulla officiis, magnam expedita, asperiores ipsam distinctio nemo culpa.</p>
@@ -484,7 +484,7 @@
             cupiditate dicta asperiores magni ipsa omnis voluptas!</p>
         <div class="row">
             <div class="testimonial-col">
-                <img src="/images/user1.jpg" alt="">
+                <img src="images/user1.jpg" alt="">
                 <div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti dolorum molestiae neque dicta
                         sunt veniam placeat velit magni maiores non in nobis, blanditiis fuga numquam quia magnam, ipsam
@@ -494,7 +494,7 @@
                 </div>
             </div>
             <div class="testimonial-col">
-                <img src="/images/user2.jpg" alt="">
+                <img src="images/user2.jpg" alt="">
                 <div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti dolorum molestiae neque dicta
                         sunt veniam placeat velit magni maiores non in nobis, blanditiis fuga numquam quia magnam, ipsam
