--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         header::before {
             content: "";
-            background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url("/images/banner.png");
+            background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url("images/banner.png");
             background-position: center;
             background-size: cover;
             height: 100%;
@@ -336,7 +336,7 @@
         .cta{
             margin:50px auto;
             width:80%;
-            background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url("/images/banner2.jpg");
+            background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url("images/banner2.jpg");
             background-position: center;
             background-size: cover;
             border-radius: 10px;
